--- a/app/src/main/res/layout/activity_make_money.xml
+++ b/app/src/main/res/layout/activity_make_money.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:src="@mipmap/ic_launcher" />
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_advertising_investment" />
     </RelativeLayout>
 </LinearLayout>
