--- a/app/src/main/res/layout/activity_mytask.xml
+++ b/app/src/main/res/layout/activity_mytask.xml
@@ -53,7 +53,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_marginTop="10dp"
-        tools:listitem="@layout/task_item"
+        tools:listitem="@layout/item_task"
         tools:itemCount="5"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
