--- a/app/src/main/res/layout/activity_mine_wallet.xml
+++ b/app/src/main/res/layout/activity_mine_wallet.xml
@@ -111,6 +111,7 @@
         android:id="@+id/mineWallet_list_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="none"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
