--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -59,4 +59,17 @@
         android:textSize="14sp"
         android:textColor="@color/white" />
 
+    <TextView
+        android:id="@+id/date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="2018/10/9"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textSize="14sp" />
+
 </LinearLayout>
