微帮帮布局搭建

--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -9,7 +9,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="20dp"
     android:text="@string/nick_name"
     android:textSize="12sp"
     />
@@ -96,7 +96,7 @@
         android:background="@drawable/edit_shape"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -143,7 +143,7 @@
         android:lines="1"
         android:background="@drawable/edit_shape"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
