--- a/app/src/main/res/layout/activity_mine_team.xml
+++ b/app/src/main/res/layout/activity_mine_team.xml
@@ -9,7 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
         android:background="@mipmap/icon_mine_team_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -102,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/two_level_members_tip"
         android:textColor="@color/txt_black"
