--- a/app/src/main/res/layout/activity_open_member.xml
+++ b/app/src/main/res/layout/activity_open_member.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/layout_title" />
@@ -17,7 +18,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <FrameLayout
@@ -40,20 +41,6 @@
                 android:layout_gravity="center|bottom"
                 android:layout_marginStart="25dp"
                 android:src="@drawable/dollar_drawable" />
-            <!--<TextView
-                android:id="@+id/num1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/red_circle_shape"
-                android:gravity="center"
-                android:text="99" />-->
-
-            <!--<TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_toRightOf="@id/num1"
-                android:text="￥" />-->
         </FrameLayout>
 
         <FrameLayout
@@ -77,28 +64,12 @@
                 android:layout_marginStart="25dp"
                 android:src="@drawable/dollar_drawable" />
 
-            <!--<TextView
-                android:id="@+id/num2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/red_circle_shape"
-                android:gravity="center"
-                android:text="999" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_toRightOf="@id/num2"
-                android:text="￥" />-->
         </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
