--- a/app/src/main/res/layout/activity_pay_member.xml
+++ b/app/src/main/res/layout/activity_pay_member.xml
@@ -8,8 +8,8 @@
     <include layout="@layout/layout_title" />
 
     <LinearLayout
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="22dp"
         android:layout_marginStart="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,6 +28,9 @@
     </LinearLayout>
 
     <include layout="@layout/pay_change_layout" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
 
     <include layout="@layout/button_layout" />
 </LinearLayout>
