--- a/app/src/main/res/layout/activity_withdraw_money.xml
+++ b/app/src/main/res/layout/activity_withdraw_money.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/layout_title" />
@@ -48,7 +49,6 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
         android:text="@string/yixianjine"
-        android:textColor="@color/black"
         android:textSize="15sp" />
 
     <EditText
@@ -81,7 +81,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
         <include layout="@layout/button_layout" />
