--- a/app/src/main/res/layout/fgt_personal.xml
+++ b/app/src/main/res/layout/fgt_personal.xml
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
         android:padding="8dp">
 
         <LinearLayout
@@ -142,6 +144,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/edit_shape"
         android:orientation="vertical"
+        android:elevation="3dp"
         android:padding="8dp">
 
         <TextView
@@ -186,6 +189,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_shape"
         android:orientation="vertical"
+        android:elevation="3dp"
         android:padding="8dp">
 
         <TextView
@@ -227,6 +231,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
+        android:elevation="3dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_shape"
         android:orientation="vertical"
