--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,9 +58,10 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="@string/phone"
+                android:maxLength="11"
                 android:inputType="phone"
                 android:singleLine="true"
-                android:textSize="13sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -92,7 +93,7 @@
                 android:hint="@string/pwd"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                android:textSize="13sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -125,7 +126,7 @@
                 android:hint="@string/pwd_again"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                android:textSize="13sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -157,7 +158,7 @@
                 android:background="@null"
                 android:hint="@string/verification_code"
                 android:singleLine="true"
-                android:textSize="13sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/login_getVerification_tv"
