--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -8,6 +8,7 @@
     android:paddingTop="10dp">
 
     <TextView
+        android:id="@+id/order_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -23,11 +24,13 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/head_img"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
+            android:id="@+id/name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -37,6 +40,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/price_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
