添加投放广告成功之后交互 修改个人中心界面，防止屏幕高度不够无法上下滑动问题

--- a/app/src/main/res/layout/fgt_personal.xml
+++ b/app/src/main/res/layout/fgt_personal.xml
@@ -22,10 +22,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"
         android:padding="8dp">
 
         <LinearLayout
@@ -59,8 +59,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:textSize="12sp"
-                android:text="总收入" />
+                android:text="总收入"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -95,8 +95,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:textSize="12sp"
-                android:text="今日收入" />
+                android:text="今日收入"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -131,125 +131,137 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:textSize="12sp"
-                android:text="已提现" />
+                android:text="已提现"
+                android:textSize="12sp" />
         </LinearLayout>
     </RelativeLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/edit_shape"
-        android:orientation="vertical"
-        android:elevation="3dp"
-        android:padding="8dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/personal_info_tv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@mipmap/icon_turn_right"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/icon_personal_info"
-            android:gravity="center_vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:text="@string/personal_info"
-            android:textSize="12sp" />
+            android:orientation="vertical"
+            android:paddingBottom="10dp"
+            android:paddingTop="5dp">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/toast_stroke_gray" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/edit_shape"
+                android:elevation="3dp"
+                android:orientation="vertical"
+                android:padding="8dp">
 
-        <TextView
-            android:id="@+id/mine_team_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@mipmap/icon_turn_right"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/icon_mine_team"
-            android:gravity="center_vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:text="@string/mine_team"
-            android:textSize="12sp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/personal_info_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@mipmap/icon_turn_right"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@mipmap/icon_personal_info"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/personal_info"
+                    android:textSize="12sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/edit_shape"
-        android:orientation="vertical"
-        android:elevation="3dp"
-        android:padding="8dp">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/toast_stroke_gray" />
 
-        <TextView
-            android:id="@+id/mine_wallet_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@mipmap/icon_turn_right"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/icon_mine_wallet"
-            android:gravity="center_vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:text="@string/mine_wallet"
-            android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/mine_team_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@mipmap/icon_turn_right"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@mipmap/icon_mine_team"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/mine_team"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/toast_stroke_gray" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_shape"
+                android:elevation="3dp"
+                android:orientation="vertical"
+                android:padding="8dp">
 
-        <TextView
-            android:id="@+id/put_forward_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@mipmap/icon_turn_right"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/icon_put_forward"
-            android:gravity="center_vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:text="@string/put_forward"
-            android:textSize="12sp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/mine_wallet_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@mipmap/icon_turn_right"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@mipmap/icon_mine_wallet"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/mine_wallet"
+                    android:textSize="12sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:elevation="3dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/edit_shape"
-        android:orientation="vertical"
-        android:padding="8dp">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/toast_stroke_gray" />
 
-        <TextView
-            android:id="@+id/change_password_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@mipmap/icon_turn_right"
-            android:drawablePadding="5dp"
-            android:drawableStart="@mipmap/icon_change_password"
-            android:gravity="center_vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:text="@string/change_password"
-            android:textSize="12sp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/put_forward_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@mipmap/icon_turn_right"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@mipmap/icon_put_forward"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/put_forward"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-    <include layout="@layout/button_layout" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_shape"
+                android:elevation="3dp"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/change_password_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@mipmap/icon_turn_right"
+                    android:drawablePadding="5dp"
+                    android:drawableStart="@mipmap/icon_change_password"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/change_password"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <include layout="@layout/button_layout" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
