微帮帮布局搭建

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -16,7 +16,7 @@
         android:textSize="12sp" />
 
     <EditText
-        android:id="@+id/name_edit"
+        android:id="@+id/old_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
@@ -41,7 +41,7 @@
         android:textSize="12sp" />
 
     <EditText
-        android:id="@+id/phone_edit"
+        android:id="@+id/new_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
@@ -66,7 +66,7 @@
         android:textSize="12sp" />
 
     <EditText
-        android:id="@+id/address_edit"
+        android:id="@+id/confirm_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
