--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -1,73 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/layout_title"/>
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
+
+    <include layout="@layout/layout_title" />
+
     <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="15dp"
-    android:layout_marginTop="20dp"
-    android:text="@string/nick_name"
-    android:textSize="12sp"
-    />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/head_portrait"
+        android:textSize="12sp" />
+
+    <RelativeLayout
+        android:onClick="onChooseHead"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/head_img"
+            android:src="@mipmap/icon_head"
+            android:layout_centerInParent="true"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
+        <TextView
+            android:id="@+id/img_hint_tv"
+            android:text="点击修改"
+            android:textSize="12sp"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/nick_name"
+        android:textSize="12sp" />
 
     <EditText
-        android:layout_marginTop="5dp"
+        android:id="@+id/name_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/edit_shape"
         android:elevation="3dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="10sp"
         android:hint="@string/nick_name_hint"
         android:lines="1"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:text="@string/sex"
-        android:textSize="12sp"
-        />
+        android:textSize="12sp" />
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/man_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:text="@string/man"
-            android:textSize="12sp"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:background="@drawable/edit_shape"
             android:elevation="3dp"
-            android:background="@drawable/edit_shape" />
+            android:paddingBottom="5dp"
+            android:paddingEnd="15dp"
+            android:paddingStart="15dp"
+            android:paddingTop="5dp"
+            android:text="@string/man"
+            android:onClick="onMan"
+            android:textSize="12sp" />
+
         <TextView
+            android:id="@+id/woman_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:text="@string/woman"
-            android:textSize="12sp"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:background="@drawable/edit_shape"
             android:elevation="3dp"
-            android:background="@drawable/edit_shape" />
+            android:paddingBottom="5dp"
+            android:paddingEnd="15dp"
+            android:paddingStart="15dp"
+            android:paddingTop="5dp"
+            android:text="@string/woman"
+            android:onClick="onWoman"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
@@ -76,26 +113,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:text="@string/phone"
-        android:textSize="12sp"
-        />
+        android:text="@string/age"
+        android:textSize="12sp" />
 
     <EditText
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="10sp"
-        android:elevation="3dp"
-        android:hint="@string/phone_hint"
-        android:lines="1"
-        android:background="@drawable/edit_shape"
+        android:id="@+id/age_edit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/edit_shape"
+        android:elevation="3dp"
+        android:hint="@string/age_hint"
+        android:lines="1"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
     <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -149,26 +186,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:text="@string/detailed_address"
-        android:textSize="12sp"
-        />
+        android:textSize="12sp" />
 
     <EditText
-        android:layout_marginTop="5dp"
+        android:id="@+id/address_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="10sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/edit_shape"
+        android:elevation="3dp"
         android:gravity="top|left"
         android:hint="@string/detailed_address_hint"
         android:lines="3"
-        android:elevation="3dp"
-        android:background="@drawable/edit_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="10sp" />
 
-    <include layout="@layout/button_layout"/>
+    <include layout="@layout/button_layout" />
 </LinearLayout>
