--- a/app/src/main/res/layout/activity_task_rules.xml
+++ b/app/src/main/res/layout/activity_task_rules.xml
@@ -7,4 +7,15 @@
 
     <include layout="@layout/layout_title" />
 
+    <ImageView
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/icon_rules" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/icon_task2" />
+
 </LinearLayout>
