--- a/app/src/main/res/layout/fgt_home.xml
+++ b/app/src/main/res/layout/fgt_home.xml
@@ -15,11 +15,13 @@
         android:layout_height="wrap_content"
         android:background="@mipmap/notice"
         android:gravity="center"
+        android:onClick="onAdvClick"
         android:orientation="vertical"
         android:paddingBottom="5dp"
         android:paddingTop="5dp">
 
         <TextView
+            android:id="@+id/title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:lines="1"
@@ -28,6 +30,7 @@
             android:textSize="10sp" />
 
         <TextView
+            android:id="@+id/content_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -35,6 +38,11 @@
             android:textColor="#666"
             android:text="@string/notice_2"
             android:textSize="10sp" />
+
+        <!--<com.weibangbang.view.MyViewFlipper
+            android:id="@+id/myViewFilpper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>-->
     </LinearLayout>
 
     <FrameLayout
