修改密码界面的原密码新密码和重复密码输入框添加输入密码类型 添加投放广告回传对象以及投放广告界面回传信息之后交互 修复立即赚佣金界面点击按钮异常退出问题，后期添加接口

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -26,6 +26,7 @@
         android:background="@drawable/edit_shape"
         android:elevation="3dp"
         android:hint="@string/original_password_tips"
+        android:inputType="textPassword"
         android:lines="1"
         android:paddingBottom="10dp"
         android:paddingEnd="10dp"
@@ -51,6 +52,7 @@
         android:background="@drawable/edit_shape"
         android:elevation="3dp"
         android:hint="@string/new_password_tips"
+        android:inputType="textPassword"
         android:lines="1"
         android:paddingBottom="10dp"
         android:paddingEnd="10dp"
@@ -76,6 +78,7 @@
         android:background="@drawable/edit_shape"
         android:elevation="3dp"
         android:hint="@string/confirm_new_password_tips"
+        android:inputType="textPassword"
         android:lines="1"
         android:paddingBottom="10dp"
         android:paddingEnd="10dp"
