--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginEnd="15dp"
     android:layout_marginStart="15dp"
     android:layout_marginTop="15dp"
@@ -30,7 +31,7 @@
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="落砂机奶茶"
+            tools:text="落砂机奶茶"
             android:textColor="@color/txt_black" />
 
         <TextView
@@ -40,7 +41,7 @@
             android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="落砂机奶茶落砂机奶茶落砂机奶茶落砂机奶茶"
+            tools:text="落砂机奶茶落砂机奶茶落砂机奶茶落砂机奶茶"
             android:textSize="12sp" />
 
     </LinearLayout>
