微帮帮布局搭建

--- a/app/src/main/res/layout/activity_task_rules.xml
+++ b/app/src/main/res/layout/activity_task_rules.xml
@@ -8,13 +8,26 @@
     <include layout="@layout/layout_title" />
 
     <ImageView
-        android:layout_gravity="center_horizontal"
+        android:id="@+id/show_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:src="@mipmap/icon_rules" />
 
+    <TextView
+        android:id="@+id/rules_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@drawable/edit_shape"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textSize="12sp"
+        android:visibility="gone" />
+
     <ImageView
-        android:layout_width="wrap_content"
+        android:id="@+id/rules_img"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@mipmap/icon_task2" />
 
