--- a/app/src/main/res/layout/fgt_member.xml
+++ b/app/src/main/res/layout/fgt_member.xml
@@ -13,6 +13,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@mipmap/notice"
+        android:gravity="center"
+        android:onClick="onAdvClick"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:id="@+id/title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:textColor="@color/txt_black"
+            android:text="@string/notice_1"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/content_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:lines="1"
+            android:textColor="#666"
+            android:text="@string/notice_2"
+            android:textSize="10sp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@color/white"
         android:gravity="center_vertical"
