--- a/app/src/main/res/layout/activity_free_lead.xml
+++ b/app/src/main/res/layout/activity_free_lead.xml
@@ -7,8 +7,8 @@
 
     <include layout="@layout/layout_title" />
 
-    <com.youth.banner.Banner
-        android:id="@+id/banner"
+    <ImageView
+        android:id="@+id/banner_img"
         android:layout_width="match_parent"
         android:layout_height="150dp" />
 
