--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -107,7 +107,7 @@
                 android:layout_marginTop="5dp"
                 android:elevation="3dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <include layout="@layout/button_layout"/>
