--- a/app/src/main/res/layout/acvity_share_money.xml
+++ b/app/src/main/res/layout/acvity_share_money.xml
@@ -46,8 +46,9 @@
             android:src="@mipmap/icon_share_line" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/qrCode_img"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             tools:src="@mipmap/ic_launcher" />
