--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -20,7 +20,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
+        android:paddingStart="20dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
