--- a/app/src/main/res/layout/activity_free_lead.xml
+++ b/app/src/main/res/layout/activity_free_lead.xml
@@ -10,6 +10,7 @@
     <ImageView
         android:id="@+id/banner_img"
         android:layout_width="match_parent"
+        android:scaleType="fitXY"
         android:layout_height="150dp" />
 
     <TextView
