--- a/app/src/main/res/layout/activity_open_member.xml
+++ b/app/src/main/res/layout/activity_open_member.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -27,13 +28,16 @@
             android:layout_weight="1"
             android:onClick="onRegularClicked">
 
-            <ImageView
-                android:id="@+id/regular_member_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/left_price_tv"
+                android:gravity="center"
+                tools:text="99"
+                android:textSize="20sp"
                 android:layout_gravity="center"
-                android:src="@drawable/regular_member_drawable" />
-
+                android:textStyle="bold"
+                android:background="@mipmap/icon_grey_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <ImageView
                 android:id="@+id/regular_member_img2"
                 android:layout_width="wrap_content"
@@ -49,13 +53,16 @@
             android:layout_weight="1"
             android:onClick="onSeniorClicked">
 
-            <ImageView
-                android:id="@+id/senior_member_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/right_price_tv"
+                android:gravity="center"
+                tools:text="999"
+                android:textSize="20sp"
                 android:layout_gravity="center"
-                android:src="@drawable/senior_member_drawable" />
-
+                android:textStyle="bold"
+                android:background="@mipmap/icon_grey_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <ImageView
                 android:id="@+id/senior_member_img2"
                 android:layout_width="wrap_content"
@@ -79,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/regular_member" />
+            tools:text="@string/regular_member" />
 
         <TextView
             android:id="@+id/senior_member_tv"
@@ -87,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/senior_member" />
+            tools:text="@string/senior_member" />
     </LinearLayout>
 
     <include layout="@layout/button_layout" />
