微帮帮布局搭建

--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -111,6 +111,9 @@
                 android:layout_height="wrap_content" />
 
             <include layout="@layout/button_layout"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"/>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
