--- a/app/src/main/res/layout/activity_task_rules.xml
+++ b/app/src/main/res/layout/activity_task_rules.xml
@@ -29,6 +29,8 @@
         android:id="@+id/rules_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:src="@mipmap/icon_task2" />
 
 </LinearLayout>
