--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -106,6 +106,8 @@
                 tools:src="@mipmap/ic_launcher"
                 android:layout_marginTop="5dp"
                 android:elevation="3dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
