微帮帮布局搭建

--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -126,6 +126,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/edit_shape"
         android:elevation="3dp"
+        android:inputType="number"
         android:hint="@string/age_hint"
         android:lines="1"
         android:paddingBottom="10dp"
