--- a/app/src/main/res/layout/activity_notice_details.xml
+++ b/app/src/main/res/layout/activity_notice_details.xml
@@ -7,13 +7,11 @@
 
     <include layout="@layout/layout_title" />
 
-    <TextView
-        android:id="@+id/content_tv"
-        android:layout_margin="15dp"
-        android:elevation="3dp"
-        android:padding="15dp"
-        android:gravity="center"
-        android:background="@drawable/edit_shape"
+    <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
