--- a/app/src/main/res/layout/activity_make_money.xml
+++ b/app/src/main/res/layout/activity_make_money.xml
@@ -29,6 +29,7 @@
     <include layout="@layout/button_layout"/>
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
